# autoregressive_diffusion

./: .gitignore  LICENSE  README.md  asd.py  attention_interactive.html  attention_masking.py  attention_masking_test.py  colour_balanced_recon_loss.py  compilation_testing.py  cosmos.py  cosmos_mean_var.pth  cs_train.py  cs_vae_adversarial.py  cs_vae_train.py  dataloading.py  dataset_processing_counter_strike.py  dataset_reupload.py  debug_einops.py  decode_video.py  diffusion_theory.md  fourier_test.py  gamer.py  generation_code.py  gym_train.py  gym_train_distribuited.py  gym_training.py  gym_vae_train.py  index.html  index_fusion.py  lunar_lander_test.py  output.txt  output_test.txt  pyproject.toml  pytorch_bug.py  sampler.py  save_model_to_s3.py  setup.sh  sf_compute.yaml  stream_demo.py  test.py  (+19 more)
data/: dataloading.py
edm2/: 3d_conv.py  RoPe.py  attention.py  attention_masking.py  consistency_test.py  conv.py  conv_3d.py  cosmos_vae.py  cs_dataloading.py  dataloading.py  dit.py  gym_dataloader.py  loss.py  loss_weight.py  mean_LunarLander-v3_latent.pt  misc.py  networks_edm2.py  plotting.py  precond.py  sampler.py  training_loop.py  unet.py  utils.py  vae.py  vae_test.py
edm2/attention/: RoPe.py  __init__.py  attention_masking.py  attention_modules.py
edm2/cs_dataset_processing/: dataset_processing_counter_strike.py  dataset_reupload.py  index_fusion.py  mario_kart.py
edm2/gym_dataloaders/: gym_dataloader_acrobot.py  gym_dataloader_mountaincar.py
edm2/vae/: __init__.py  discriminator.py  from_scratch.py  models.py  stability.py  utils.py  vae.py
old/: attention_masking_test.py  bug.py  cosmos.py  cs_train.py  edm2_test.py  fourier_test.py  normalized_weight_benchmarking.py  pytorch_bug.py  test_unet.py
website/: bibliography.bib  sourcecode.js  style.css
website/scripts/: VAE.js  attention.js
world_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
