[project]
name = "autoregressive-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "torch>=2.5",
    "setuptools",
    "einops",
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "moviepy",
    "scipy",
    "opencv-python",
    "accelerate",
    "gymnasium[box2d,classic-control]",
    "diffusers>=0.32.1",
    "transformers",
    "datasets>=3.2.0",
    "diffusers",
    "opencv-python",
    "h5py",
    "mosaicml-streaming",
    # "cosmos_tokenizer @ git+https://github.com/NVIDIA/Cosmos-Tokenizer",
    "av"
]

[tool.setuptools.packages.find]
include = ["edm2", "edm2.*"]
